--- a/Views/Partials/CatalogMenuPartial.cshtml
+++ b/Views/Partials/CatalogMenuPartial.cshtml
@@ -13,7 +13,7 @@
       {
         <li>
           <div class="btn-anim loader">
-            <a class="btn btn-main" href="@Url.ActionLink("Category", "Home", new { id = str.id})">@str.name</a>
+            <a class="btn btn-main" href="@Url.ActionLink("Category", "Categories", new { name = str.name})">@str.name</a>
           </div>
         </li>
       }
