--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   @* <meta http-equiv="x-ua-compatible" content="IE=edge">*@
@@ -21,21 +19,22 @@
   <meta name="yandex-verification" content="ffb2a7e35abc7b93" />
   <meta property="og:description" content="@ViewData["Description"]">
   <meta property="description" content="@ViewData["Description"]">
-  <title>YAKUTSA-@ViewData["Title"]</title>
+  <title>YAKUTSA | @ViewData["Title"]</title>
+  <link rel="canonical" href='@ViewData["canonical"]'>
   <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/svg" href="/favicon.svg">
   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="~/lib/fancybox/jquery.fancybox.css">
   <link rel="stylesheet" href="~/css/suggestion.css" />
   <link rel="stylesheet" href="~/lib/toolkit.min.css" asp-append-version="true" />
-
+  <link rel="stylesheet" href="~/lib/labelholder/labelholder.css" />
   <style>
     body.loading main, body.loading aside, header.loading {
         transition: 250ms;
         opacity: 0;
     }
   </style>
-
 
   <script src="~/lib/fontawesome/49a24c4a0e.js"></script>
 </head>
@@ -61,15 +60,18 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/87733644" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+    <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1318686-5SDfC"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
+    <noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1318686-5SDfC" style="position:fixed; left:-999px;" alt="" /></noscript>
+
   }
 
-  <script>
-    const isDevelopment = '@isDevelopment' == 'True' ? true : false;
+  <script type="text/javascript">
+    const isDevelopment = @isDevelopment.ToString().ToLower();
   </script>
 
   <header class="loading">
     <nav class="top-bar">
-      <div>
+      <div style="margin-top: 15px;">
         <a href="/" class="d-none d-sm-block">
           <img src="~/img/logo.png" alt="logo" aria-hidden="true" width="293" height="45" style="object-fit:contain" />
         </a>
@@ -77,15 +79,29 @@
           <img src="~/img/sm_logo.png" alt="logo" aria-hidden="true" width="46" height="41" style="object-fit:contain" />
         </a>
       </div>
+
       <div class="inline-icons">
-        @{
+        @*  @{
           await Html.RenderPartialAsync("~/Views/Partials/LoginPartial.cshtml");
-        }
-        <div class="position-relative text-center mt-1 mx-2">
-          <i class="fas fa-bars mx-auto d-block my-2 fa-2x nohover" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
+          }*@
+        <div class="position-relative text-center">
+          <i class="fas fa-bars d-block fa-2x nohover" style="margin-top: 0 !important;" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
           <a class="nohover" href="@Url.ActionLink("Cart", "Home")" aria-hidden="true">
             <i class="fas fa-shopping-cart mx-auto d-block fa-2x nohover" count="@ViewData["count"]" role="button"></i>
           </a>
+          @if (SignInManager.IsSignedIn(User))
+          {
+            <a class="nohover" href="@Url.ActionLink("Products", "Admin")" aria-hidden="true">
+              <i class="fas fa-tools d-block fa-2x nohover" count="0" role="button" aria-hidden="true"></i>
+            </a>
+            <a class="nohover" href="@Url.ActionLink("SignOut", "Home")" aria-hidden="true">
+              <i class="fas d-block fa-door-open fa-2x" aria-hidden="true" role="button"></i>
+            </a>
+          }
+          else
+          {
+            <i role="button" class="fas fa-door-closed nohover fa-2x" data-bs-toggle="modal" data-bs-target="#signin_modal" aria-hidden="true"></i>
+          }
         </div>
       </div>
     </nav>
@@ -122,8 +138,11 @@
         </div>
         <div class="col social">
           @*   <a href="#"><i class="fa fa-facebook"></i></a>*@
-          <a target="_blank" href="https://vk.com/yakutsa_brand"><i class="fa fa-vk fa-3x"></i></a>
           <a target="_blank" href="https://t.me/YakutsaBot"><i class="fa fa-telegram fa-3x"></i></a>
+          <a target="_blank" href="https://vk.com/yakutsa_brand"><i class="fa fa-vk fa-3x"></i></a>
+          <a target="_blank" href="/"><i class="fa fa-instagram fa-3x"></i></a>
+          <a target="_blank" href="/"><i class="fa fa-youtube fa-3x"></i></a>
+          <a target="_blank" href="/"><i class="fab fa-tiktok fa-3x"></i></a>
           @*   <a href="#"><i class="fa fa-odnoklassniki"></i></a>*@
         </div>
       </div>
@@ -142,9 +161,9 @@
     }
   </div>
 
-  @* @{
-    await Html.RenderPartialAsync("/Views/Partials/CatalogMenuPartial.cshtml", (List<ProductGroup>)ViewBag.Menu!);
-    }*@
+  @{
+    await Html.RenderPartialAsync("/Views/Partials/SigninModal.cshtml");
+  }
 
   <div class="d-block toTop-toggler"><i class="fa fa-arrow-up opacity-100" style="color:#0c7a01;z-index: 50;"></i></div>
   <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
@@ -155,6 +174,7 @@
   <script src="~/js/labelholder.js" type="text/javascript"></script>
   <script src="~/js/suggestion.js" type="text/javascript"></script>
   <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+  <script src="~/lib/labelholder/labelholder.js" type="text/javascript"></script>
   <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
   <script type="text/javascript" language="javascript">
     document.addEventListener("DOMContentLoaded", () => {
@@ -165,6 +185,11 @@
     window.onload = function () { document.body.classList.remove('loading');};
       (function ($) {Initialize($);})(jQuery)
   </script>
+
+  @if (SignInManager.IsSignedIn(User) && User.IsInRole("admin"))
+  {
+    <script src="~/js/admin.js" type="text/javascript" asp-append-version="true"></script>
+  }
 
 
 
