--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
   <div class="row text-content">
-    <div class="col px-0">
+    <div class="col">
       <p>
             Настоящее Положение об обработке персональных данных (далее – Положение, настоящее Положение) разработано и применяется в соответствии с п. 2 ч. 1 ст. 18.1. Федерального закона от 27.07.2006 № 152-ФЗ «О персональных данных».
         Настоящее Положение определяет политику  ООО "ЯКУТСА" (далее - Оператор) в отношении обработки персональных данных.
