--- a/Views/Home/RefundPolicy.cshtml
+++ b/Views/Home/RefundPolicy.cshtml
@@ -3,7 +3,7 @@
     <h1 class="text-center">@ViewData["Title"]</h1>
   </div>
 </div>
-<div class="container px-0">
+<div class="container">
   <div class="row text-content">
     <div class="col-xl-12 mx-auto">
       <h4 class="text-center">ВОЗВРАТ</h4>
