--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -5,7 +5,7 @@
   <h1 class="text-center">@ViewData["Title"]</h1>
 </div>
 
-<div class="container">
+<div class="container mt-0">
   <div class="row">
     <div class="col-md-12">
 
