--- a/Views/Home/DeliveryRules.cshtml
+++ b/Views/Home/DeliveryRules.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row">
   <h1 class="text-center">@ViewData["Title"]</h1>
 </div>
-<div class="container px-0">
+<div class="container">
   <div class="row text-content">
     <div class="col-xl-12 mx-auto">
       <p>
