--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -24,11 +24,13 @@
   <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/svg" href="/favicon.svg">
-  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" asp-append-version="true">
   <link rel="stylesheet" href="~/lib/fancybox/jquery.fancybox.css">
   <link rel="stylesheet" href="~/css/suggestion.css" />
   <link rel="stylesheet" href="~/lib/toolkit.min.css" asp-append-version="true" />
   <link rel="stylesheet" href="~/lib/labelholder/labelholder.css" />
+  <link rel="stylesheet" href="~/lib/owl/css/owl.carousel.css"  asp-append-version="true"/>
+  <link rel="stylesheet" href="~/lib/owl/css/owl.theme.default.css" />
   <style>
     body.loading main, body.loading aside, header.loading {
         transition: 250ms;
@@ -41,28 +43,27 @@
 <body class="busy">
   @{
     bool isDevelopment = true;
-  }
-  @if (!Startup.Environment.IsDevelopment())
-  {
-    isDevelopment = false;
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    if (!Startup.Environment.IsDevelopment())
+    {
+      isDevelopment = false;
+          <!-- Yandex.Metrika counter -->
+          <script type="text/javascript">
+            (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-      ym(87733644, "init", {
-           clickmap:true,
-           trackLinks:true,
-           accurateTrackBounce:true,
-           webvisor:true
-      });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/87733644" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
-    <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1318686-5SDfC"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
-    <noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1318686-5SDfC" style="position:fixed; left:-999px;" alt="" /></noscript>
-
+            ym(87733644, "init", {
+                 clickmap:true,
+                 trackLinks:true,
+                 accurateTrackBounce:true,
+                 webvisor:true
+            });
+          </script>
+          <noscript><div><img src="https://mc.yandex.ru/watch/87733644" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+          <!-- /Yandex.Metrika counter -->
+          <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1318686-5SDfC"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
+          <noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1318686-5SDfC" style="position:fixed; left:-999px;" alt="" /></noscript>
+    }
   }
 
   <script type="text/javascript">
@@ -70,47 +71,33 @@
   </script>
 
   <header class="loading">
-    <nav class="top-bar">
-      <div style="margin-top: 15px;">
-        <a href="/" class="d-none d-sm-block">
-          <img src="~/img/logo.png" alt="logo" aria-hidden="true" width="293" height="45" style="object-fit:contain" />
-        </a>
-        <a href="/" class="d-sm-none">
-          <img src="~/img/sm_logo.png" alt="logo" aria-hidden="true" width="46" height="41" style="object-fit:contain" />
-        </a>
-      </div>
-
+    <nav class="top-bar fade">
       <div class="inline-icons">
-        @*  @{
-          await Html.RenderPartialAsync("~/Views/Partials/LoginPartial.cshtml");
-          }*@
-        <div class="position-relative text-center">
-          <i class="fas fa-bars d-block fa-2x nohover" style="margin-top: 0 !important;" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
-          <a class="nohover" href="@Url.ActionLink("Cart", "Home")" aria-hidden="true">
-            <i class="fas fa-shopping-cart mx-auto d-block fa-2x nohover" count="@ViewData["count"]" role="button"></i>
-          </a>
-          @if (SignInManager.IsSignedIn(User))
-          {
+        <i class="fas fa-bars fa-sm nohover" style="margin-top: 0 !important;" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
+        @if (SignInManager.IsSignedIn(User))
+        {
             <a class="nohover" href="@Url.ActionLink("Products", "Admin")" aria-hidden="true">
-              <i class="fas fa-tools d-block fa-2x nohover" count="0" role="button" aria-hidden="true"></i>
+              <i class="fas fa-tools d-block fa-sm nohover" count="0" role="button" aria-hidden="true"></i>
             </a>
             <a class="nohover" href="@Url.ActionLink("SignOut", "Home")" aria-hidden="true">
-              <i class="fas d-block fa-door-open fa-2x" aria-hidden="true" role="button"></i>
+              <i class="fas d-block fa-door-open fa-sm" aria-hidden="true" role="button"></i>
             </a>
-          }
-          else
-          {
-            <i role="button" class="fas fa-door-closed nohover fa-2x" data-bs-toggle="modal" data-bs-target="#signin_modal" aria-hidden="true"></i>
-          }
-        </div>
+        }
+        else
+        {
+            <i role="button" class="fas fa-door-closed nohover fa-sm" data-bs-toggle="modal" data-bs-target="#signin_modal" aria-hidden="true"></i>
+        }
       </div>
+      <a href="/" class="d-block">
+        <img src="~/img/logo.png" alt="logo" aria-hidden="true" height="40" style="object-fit:contain;width:100%;" />
+      </a>
+      <a class="nohover" href="@Url.ActionLink("Cart", "Home")" aria-hidden="true">
+        <i class="fas fa-shopping-cart d-block fa-sm nohover" count="@ViewData["count"]" role="button"></i>
+      </a>
     </nav>
-
     @{
       await Html.RenderPartialAsync("~/Views/Partials/MainMenuPartial.cshtml");
     }
-
-
   </header>
   <main role="main">
     <div class="container-fluid">
@@ -121,16 +108,64 @@
   <footer class="footer-dark">
     <div class="container">
       <div class="row" style="border-top-style: none;">
-        <div class="col-sm-7 col-md-4 item">
-          <h4>Документы</h4>
-          <ul>
-            <li><a href="@Url.ActionLink("PaymentRules","Home")">Способы оплаты</a></li>
-            <li><a href="@Url.ActionLink("DeliveryRules","Home")">Условия доставки</a></li>
-            <li><a href="@Url.ActionLink("RefundPolicy","Home")">Политика возврата</a></li>
-            <li><a href="@Url.ActionLink("Privacy","Home")">Положение о конфиденциальности</a></li>
-          </ul>
+        <div class="col-sm-7 col-md-7 item">
+
+
+          <div class="accordion accordion-flush" id="footer_accordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="footer-flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#footer-flush-collapseOne" aria-expanded="false" aria-controls="footer-flush-collapseOne">
+                  Клиентам
+                </button>
+              </h2>
+              <div id="footer-flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="footer-flush-headingOne" data-bs-parent="#footer_accordion">
+                <ul class="text-left m-0">
+                  <li><a href="@Url.ActionLink("PaymentRules","Home")">Способы оплаты</a></li>
+                  <li><a href="@Url.ActionLink("DeliveryRules","Home")">Условия доставки</a></li>
+                  <li><a href="@Url.ActionLink("RefundPolicy","Home")">Политика возврата</a></li>
+                  <li><a href="@Url.ActionLink("Privacy","Home")">Положение о конфиденциальности</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="footer-flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#footer-flush-collapseTwo" aria-expanded="false" aria-controls="footer-flush-collapseTwo">
+                  Контакты
+                </button>
+              </h2>
+              <div id="footer-flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="footer-flush-headingTwo" data-bs-parent="#footer_accordion">
+                <p style="padding-left:2rem;">
+                  ООО "ЯКУТСА"
+                  <br />
+                  Номер счета: 40702810902860010663
+                  <br />
+                  ИНН: 9725040790
+                  <br />
+                  ОГРН: 1207700466324
+                  <br />
+                  КПП: 772501001
+                  <br />
+                  Юридический адрес: 115419, РОССИЯ, г. Москва, Проезд Рощинский 2-й, д. Д. 8, квартира/офис Э/ПОМ 12/XVII
+                  <br />
+                  Телефон: +7 999 003 1000
+                  <br />
+                  Email: info@yakutsa.ru
+                  <br />
+                  <br />
+                  Реквизиты АО "АЛЬФА-БАНК"
+                  <br />
+                  БИК: 044525593
+                  <br />
+                  К/с: 30101810200000000593 в ГУ БАНКА РОССИИ ПО ЦФО
+                </p>
+              </div>
+            </div>
+
+          </div>
+
         </div>
-        <div class="col-sm-1 col-md-4 item">
+        <div class="col-sm-1 col-md-1 item">
           @* <ul class="d-inline-flex w-100 justify-content-center">
             <li class="mx-2 nohover"><i class="fa fa-cc-visa fa-3x nohover"></i></li>
             <li class="mx-2 nohover"><i class="fa fa-cc-mastercard fa-3x nohover"></i></li>
@@ -140,13 +175,13 @@
           @*   <a href="#"><i class="fa fa-facebook"></i></a>*@
           <a target="_blank" href="https://t.me/YakutsaBot"><i class="fa fa-telegram fa-3x"></i></a>
           <a target="_blank" href="https://vk.com/yakutsa_brand"><i class="fa fa-vk fa-3x"></i></a>
-          <a target="_blank" href="/"><i class="fa fa-instagram fa-3x"></i></a>
-          <a target="_blank" href="/"><i class="fa fa-youtube fa-3x"></i></a>
-          <a target="_blank" href="/"><i class="fab fa-tiktok fa-3x"></i></a>
+          <a target="_blank" href="https://instagram.com/yakutsa_brand"><i class="fa fa-instagram fa-3x"></i></a>
+          <a target="_blank" href="https://www.youtube.com/channel/UCxq6j-h92qNcrzla8Ol3XAw"><i class="fa fa-youtube fa-3x"></i></a>
+          <a target="_blank" href="https://www.tiktok.com/@@yakutsa_brand"><i class="fab fa-tiktok fa-3x"></i></a>
           @*   <a href="#"><i class="fa fa-odnoklassniki"></i></a>*@
         </div>
+        <p class="copyright">ООО &quot;ЯКУТСА&quot; @DateTime.Now.Year <i class="fa fa-copyright nohover"></i></p>
       </div>
-      <p class="copyright">ООО &quot;ЯКУТСА&quot; @DateTime.Now.Year <i class="fa fa-copyright nohover"></i></p>
     </div>
   </footer>
 
@@ -165,34 +200,34 @@
     await Html.RenderPartialAsync("/Views/Partials/SigninModal.cshtml");
   }
 
-  <div class="d-block toTop-toggler"><i class="fa fa-arrow-up opacity-100" style="color:#0c7a01;z-index: 50;"></i></div>
-  <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+  <div class="d-block toTop-toggler">
+    <i class="fa fa-arrow-up opacity-100 nohover" style="color:#0c7a01;z-index: 15550;"></i>
+  </div>
 
+  <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+  <script src="~/lib/owl/js/owl.carousel.js" type="text/javascript"></script>
   <script src="~/lib/mobile-detect.min.js" type="text/javascript"></script>
   <script src="/lib/popper/popper.min.js" type="text/javascript"></script>
-  <script src="/lib/fancybox/jquery.fancybox.js" type="text/javascript"></script>
+  <script src="/lib/fancybox/jquery.fancybox.js" type="text/javascript" asp-append-version="true"></script>
   <script src="~/js/labelholder.js" type="text/javascript"></script>
   <script src="~/js/suggestion.js" type="text/javascript"></script>
   <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
   <script src="~/lib/labelholder/labelholder.js" type="text/javascript"></script>
   <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
+
   <script type="text/javascript" language="javascript">
     document.addEventListener("DOMContentLoaded", () => {
         document.querySelector('header').classList.remove('loading');
         setTimeout(()=> document.body.classList.remove('busy'),150);
     });
-
     window.onload = function () { document.body.classList.remove('loading');};
       (function ($) {Initialize($);})(jQuery)
   </script>
 
   @if (SignInManager.IsSignedIn(User) && User.IsInRole("admin"))
   {
-    <script src="~/js/admin.js" type="text/javascript" asp-append-version="true"></script>
+      <script src="~/js/admin.js" type="text/javascript" asp-append-version="true"></script>
   }
-
-
-
 
   @await RenderSectionAsync("Scripts", required: false)
 </body>
