--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -236,47 +236,54 @@
   <script src="~/js/suggestion.js" type="text/javascript"></script>
   <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
   <script src="~/lib/labelholder/labelholder.js" type="text/javascript"></script>
-   <script src="~/lib/vibrate/vibrate.js" type="text/javascript" asp-append-version="true"></script>
+  <script src="~/lib/vibrate/vibrate.js" type="text/javascript" asp-append-version="true"></script>
   <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
 
   <script type="text/javascript" language="javascript">
-       let url =  '@Context.Request.Path';
+           let url =  '@Context.Request.Path';
 
-      if(url != '/'){
-             document.querySelector('.top-bar').classList.remove('fade');
-             $('.top-bar').height($('.top-bar .top-bar-inner').height() + 8);
-       }
-           document.addEventListener("DOMContentLoaded", () => {
-                setTimeout(()=> {
-                    document.body.classList.remove('loading');
-                    document.body.classList.remove('busy');
-                }, 5250);
+          if(url != '/'){
+                 document.querySelector('.top-bar').classList.remove('fade');
+                 $('.top-bar').height($('.top-bar .top-bar-inner').height() + 8);
 
-                 window.onload = function(){
 
-                     //if(isDevelopment) location.href = "https://localhost:7087/Products/Offer?pid=165&oid=467";
 
-                    setTimeout(()=> {document.body.classList.remove('loading');}, 150);
-                    setTimeout(()=> { document.body.classList.remove('busy');}, 200);
+
+    $('.top-bar').css('position','static');
+
+
            }
-           });
+               document.addEventListener("DOMContentLoaded", () => {
+                    setTimeout(()=> {
+                        document.body.classList.remove('loading');
+                        document.body.classList.remove('busy');
+                    }, 5250);
 
-           //$(document).ready();
+                     window.onload = function(){
+
+                         //if(isDevelopment) location.href = "https://localhost:7087/Products/Offer?pid=165&oid=467";
+
+                        setTimeout(()=> {document.body.classList.remove('loading');}, 150);
+                        setTimeout(()=> { document.body.classList.remove('busy');}, 200);
+               }
+               });
+
+               //$(document).ready();
 
 
 
-             (function ($) {Initialize($);})(jQuery);
+                 (function ($) {Initialize($);})(jQuery);
 
 
 
-            var _rcct = "6c4caa7779756413431bb9c176386908bc2a161066fed02b9c17e42ba5c0d1c4";
-    !function (t) {
-        var a = t.getElementsByTagName("head")[0];
-        var c = t.createElement("script");
-        c.type = "text/javascript";
-        c.src = "//c.retailcrm.tech/widget/loader.js";
-        a.appendChild(c);
-    } (document);
+                var _rcct = "6c4caa7779756413431bb9c176386908bc2a161066fed02b9c17e42ba5c0d1c4";
+        !function (t) {
+            var a = t.getElementsByTagName("head")[0];
+            var c = t.createElement("script");
+            c.type = "text/javascript";
+            c.src = "//c.retailcrm.tech/widget/loader.js";
+            a.appendChild(c);
+        } (document);
 
   </script>
 
