--- a/Views/Store/Product.cshtml
+++ b/Views/Store/Product.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row d-none">
   <div class="col-md-12">
-    <h1 class="text-center mb-0"><a href="@Url.ActionLink("Category", "Categories", new {name=ViewData["backUrl"]})">@ViewData["categoryName"]</a></h1>
+    <h1 class="text-center mb-0"><a href="@Url.ActionLink("Category", "Store", new {name=ViewData["backUrl"]})">@ViewData["categoryName"]</a></h1>
   </div>
 </div>
 
@@ -21,7 +21,7 @@
 }
 
 <div class="my-1 mr-auto goback-wrapper">
-  <a class="" href="@Url.ActionLink("Category", "Categories", new {name=ViewData["backUrl"]})">
+  <a class="" href="@Url.ActionLink("Category", "Store", new {categoryName=ViewData["backUrl"]})">
     <i class="fas fa-arrow-left md ms-0 ms-md-5 nohover" style="opacity:1;color:var(--main-text-color-hover)"></i>
     <span class="" style="display: inline-block;color:var(--main-text-color-hover)">назад</span>
   </a>
@@ -159,7 +159,7 @@
             @foreach (Product p in Model.analogs)
             {
               <div class="owl-item">
-                <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower())" class="nohover">
+                <a href="@Url.ActionLink("Product", "Store", new {categoryName=p.groups?.FirstOrDefault()?.name?.ToLower(), productName = p.name.ToLower()})" class="nohover">
                   <div class="item card bg-transparent nohover">
                     <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" class="w-100 px-3" style="object-fit:contain; background-color: var(--main-content-bg-color);" alt="@p.name" height="300">
                     <div class="card-body">
@@ -194,7 +194,8 @@
                 {
                   if (p.id == Model.id) continue;
                   <div class="owl-item" data="@p.id">
-                    <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower())" class="nohover">
+
+                    <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower() )" class="nohover">
                       <div class="item card bg-transparent nohover">
                         <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" class="w-100 px-3" style="object-fit:contain; background-color: var(--main-content-bg-color);" alt="@p.name" height="300">
                         <div class="card-body">
